--- a/V2/index.html
+++ b/V2/index.html
@@ -49,7 +49,7 @@
         <div class="bento-item get-in-touch">
             <div class="contact-header">Get in Touch</div>
             <div class="social-links">
-                <a href="https://github.com/beyondmebtw" class="social-link" target="_blank">
+                <a href="https://github.com/pranav1211" class="social-link" target="_blank">
                     <div class="social-item">
                         <div class="social-icon-wrapper">
                             <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
@@ -61,7 +61,7 @@
                         </div>
                         <div class="social-info">
                             <div class="social-name">GitHub</div>
-                            <div class="social-username">@beyondmebtw</div>
+                            <div class="social-username">@Pranav1211</div>
                         </div>
                     </div>
                 </a>
@@ -77,46 +77,33 @@
                         </div>
                         <div class="social-info">
                             <div class="social-name">Medium</div>
-                            <div class="social-username">@beyondmebtw</div>
+                            <div class="social-username">@BeyondMeBtw</div>
                         </div>
                     </div>
                 </a>
 
-                <a href="https://twitter.com/beyondmebtw" class="social-link" target="_blank">
+                <a href="https://youtube.com/@beyondmebtw" class="social-link" target="_blank">
                     <div class="social-item">
                         <div class="social-icon-wrapper">
                             <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <!-- YouTube Logo -->
                                 <path
-                                    d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z">
+                                    d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z">
                                 </path>
+                                <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
                             </svg>
                         </div>
                         <div class="social-info">
-                            <div class="social-name">Twitter</div>
-                            <div class="social-username">@beyondmebtw</div>
+                            <div class="social-name">Youtube</div>
+                            <div class="social-username">@BeyondMeBtw</div>
                         </div>
                     </div>
                 </a>
 
-                <a href="mailto:contact@beyondmebtw.com" class="social-link">
-                    <div class="social-item">
-                        <div class="social-icon-wrapper">
-                            <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
-                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z">
-                                </path>
-                                <polyline points="22,6 12,13 2,6"></polyline>
-                            </svg>
-                        </div>
-                        <div class="social-info">
-                            <div class="social-name">Email</div>
-                            <div class="social-username">contact@beyondmebtw.com</div>
-                        </div>
-                    </div>
-                </a>
 
-                <a href="https://linkedin.com/in/beyondmebtw" class="social-link" target="_blank">
+
+                <a href="https://www.linkedin.com/in/pranav-veeraghanta-315760119/" class="social-link" target="_blank">
                     <div class="social-item">
                         <div class="social-icon-wrapper">
                             <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
@@ -134,6 +121,24 @@
                         </div>
                     </div>
                 </a>
+
+                <a href="#" class="social-link" id="copy-email">
+                    <div class="social-item">
+                        <div class="social-icon-wrapper">
+                            <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z">
+                                </path>
+                                <polyline points="22,6 12,13 2,6"></polyline>
+                            </svg>
+                        </div>
+                        <div class="social-info">
+                            <div class="social-name">Email</div>
+                            <div class="social-username" id="email-address">Beyondmebtw@gmail.com</div>
+                        </div>
+                    </div>
+                </a>
+                <div id="toast" class="toast">Email copied to clipboard!</div>
             </div>
 
             <div class="contact-cta">Let's connect and collaborate!</div>
@@ -192,8 +197,7 @@
                     href="https://twitter.com/beyondmebtw">Tweets by beyondmebtw</a>
             </div>
         </div>
-    </div>
-
+    </div>    
     <script src="script.js"></script>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
