--- a/V2/index.html
+++ b/V2/index.html
@@ -148,13 +148,13 @@
         <div class="bento-item latest-post">
             <div class="latest-post-header">Latest Post</div>
             <div class="latest-post-content">
-                <img src="images/jackal.png" alt="The Day of The Jackal" class="latest-post-img">
+                <img src="images/pic3.jpg" alt="Latest-ost" class="latest-post-img">
                 <div class="latest-post-info">
                     <div>
-                        <div class="latest-post-title">The Day of The Jackal Review</div>
+                        <div class="latest-post-title">Beyond Me Btw : A New Chapter</div>
                         <div class="latest-post-date">March 1, 2025</div>
-                        <div class="latest-post-excerpt">A deep dive into this classic thriller and its enduring legacy
-                            in both literature and film...</div>
+                        <div class="latest-post-excerpt">Two years ago, I launched my blog, Beyond Me Btw, with the goal
+                            of exploring new experiences and ...</div>
                     </div>
                     <button class="read-more">Read More</button>
                 </div>
@@ -197,7 +197,7 @@
                     href="https://twitter.com/beyondmebtw">Tweets by beyondmebtw</a>
             </div>
         </div>
-    </div>    
+    </div>
     <script src="script.js"></script>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
