--- a/index.html
+++ b/index.html
@@ -1,145 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
-    <meta name="description" content="A personal blog by Pranav Veeraghanta, a college student who is passionate about coding and life.
-    I blog about personal experiences and topics like movies, music and video games">
-
-    <title>Home | BeyondmeBTW</title>
-
-    <meta name="beyondmebtw" description="a personal blogging website that contains articles written by pranav veeraghanta on various topics
-    such as personal lifestyle and experience and reviews about movies, TV shows, musicals.">
-    <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
-
-    <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/Images/favicon.ico">
-    <meta property="og:image" content="https://beyondmebtw.com/Images/favicon.ico">
-
-    <meta name="google-site-verification" content="hnAOk2EjIhFY0jDK7k17TitluhR8SkKNsayN4dwkNvQ" />
-
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&family=Rajdhani&display=swap');
-    </style>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois+Shadow&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ruluko&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="CSS/index.css">
-    <link rel="stylesheet" href="CSS/test.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Beyond Me Btw</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/bento.css">
+    <link rel="stylesheet" href="css/profile-card.css">
+    <link rel="stylesheet" href="css/welcome-card.css">
+    <link rel="stylesheet" href="css/latest-post.css">
+    <link rel="stylesheet" href="css/get-in-touch.css">
+    <link rel="stylesheet" href="css/projects-showcase.css">
+    <link rel="stylesheet" href="css/twitter-feed.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QT901JZ6DD"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
 
-    gtag('config', 'G-QT901JZ6DD');
-</script>
-
-<body class="bod">
-
-    <header class="header">
-        <p id="beyond">Beyond me</p>
-        <div id="hai">
-            <div class="dropdown">
-                <div id="downdr">
-                    <div id="link1">
-                        <a class="homehead" href="index.html">Home</a> &#160;&#160;
-                    </div>
-
-                    <div id="link2">
-                        <a class="abouthead" href="about.html">About</a> &#160;&#160;
-                    </div>
-
-                    <div id="link3">
-                        <a class="bloghead" href="https://medium.com/@beyondmebtw">Blog</a> &#160;&#160;
-                    </div>
-                </div>
-            </div>
-            <button class="dropbtn"><img src="Images/test.jpg" id="imga"></button>
+<body>
+    <header>
+        <div id="name">Beyond Me Btw</div>
+        <div id="links">
+            <div id="home" class="link">Home</div>
+            <div id="blog" class="link">Blog</div>
+            <div id="projects" class="link">Projects</div>
+            <div id="about" class="link">About</div>
         </div>
     </header>
 
-    <img src="Images/onne.png" id="one" alt="welcome image">
-    <div id="contactbutton" onmouseover="aboutbuttson()" onmouseout="aboutbuttsoff()">
-        <img src="Images/github.svg" class="bi bi-github cicon githubli">
-        <img src="Images/linkedin.svg" class="bi bi-linkedin cicon linkedin">
-        <img src="Images/medium.svg" class="bi bi-medium cicon medium">
-        <img src="Images/twitter-x.svg" class="bi bi-twitter-x cicon twitterr">            
-        <img src="Images/envelope-fill.svg" class="bi bi-envelope-fill cicon email">
-    </div>
-    <div>
-        <div id="email1">
-            <div class="triangle-up"></div>
-            <div id="maillink" value"Beyondmebtw@gmail.com" onmouseover="clipboardcopyover()"
-                onmouseout="clipboardcopyout()">Beyondmebtw@gmail.com</div>
-        </div>
-        <div id="email2">
-            <div class="triangle-left"></div>
-            <div class="clipboard">Copy to clipboard</div>
-            <div class="copiedtoc">Copied</div>
-        </div>
-        <div id="infoaboutbutts">
-            <div class="triangle-left-about github-about"></div>
-            <div class="about-name itsgithub">Github</div>
-            <div class="triangle-left-about linkedin-about"></div>
-            <div class="about-name itslinkedin">Linkedin</div>
-            <div class="triangle-left-about medium-about"></div>
-            <div class="about-name itsmedium">Medium</div>
-            <div class="triangle-left-about twitter-about"></div>
-            <div class="about-name itstwitter">Twitter</div>
-            <div class="triangle-left-about email-about"></div>
-            <div class="about-name itsemail">E-mail ID</div>
-        </div>
-    </div>
-    <div id="intro2">
-        <p id="nm">Nice to Meet You</p>
-        <br>
-        <p id="ipara">
-            Hello There, I'm Pranav Veeraghanta. I'm a college student
-            studying Artificial Intelligence and Machine Learning. I love Movies, Music and Gaming.<br>
-            Welcome to my blog and get to know me Beyond Me.</p>
-    </div>
-    <br><br>
-    <div id="embedd">
-        <div id="twitem"><a class="twitter-timeline lazyload" data-theme="dark" data-width="600" data-height="650"
-                href="https://twitter.com/Pranavisda1?ref_src=twsrc%5Etfw"></a>
-            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-    </div>
-
-    <section class="carou">
-        <div class="slider">
-            <div class="slides">
-                <img id="lastclone" src="Images/a6.png" alt="Taj Mahal">
-                <img id="m1" src="Images/a1.png" alt="eagle">
-                <img id="m2" src="Images/a2.png" alt="elephant">
-                <img id="m3" src="Images/a3.png" alt="photo">
-                <img id="m4" src="Images/a4.png" alt="WFH">
-                <img id="m5" src="Images/a5.png" alt="glasses">
-                <img id="m6" src="Images/a6.png" alt="Taj Mahal">
-                <img id="m1" src="Images/a1.png" alt="eagle">
-                <img id="m2" src="Images/a2.png" alt="elephant">
-                <img id="m3" src="Images/a3.png" alt="photo">
-                <img id="m4" src="Images/a4.png" alt="WFH">
-                <img id="m5" src="Images/a5.png" alt="glasses">
-                <img id="m6" src="Images/a6.png" alt="Taj Mahal">
-                <img id="firstclone" src="Images/a1.png" alt="eagle">
+    <div class="bento-grid">
+        <!-- Profile section (vertical/horizontal format) -->
+        <div class="bento-item profile-card">
+            <div class="profile-image">
+                <img src="images/pv1.JPG" alt="Profile image" class="profile-pic">
             </div>
         </div>
-    </section>
-    <br><br>
 
-    <script src="JS/test.js" type="text/javascript"></script>
-    <script src="JS/Javasc.js" type="text/javascript"></script>
+        <!-- Welcome section -->
+        <div class="bento-item welcome-section">
+            <h2 class="section-title">Welcome!</h2>
+            <p class="welcome-text">
+                Hello! I'm Pranav Veeraghanta, a college student with a passion for movies, music, and gaming.
+                Welcome to my blog, where you can explore and discover the world <i>Beyond Me</i>.
+            </p>
+            <a href="about.html" class="learn-more-btn">Learn more about me</a>
+        </div>
 
-    <footer id="footer">
-        <p id="f1">Beyondme_BTW</p><br>
-        <p id="f2">&copy 2022–Present. Beyond Me Btw created by Pranav Veeraghanta.</p>
-    </footer>
+        <!-- Contact/Get in Touch Section - Moved to top -->
+        <div class="bento-item get-in-touch">
+            <div class="contact-header">Get in Touch</div>
+            <div class="social-links">
+                <a href="https://github.com/pranav1211" class="social-link" target="_blank">
+                    <div class="social-item">
+                        <div class="social-icon-wrapper">
+                            <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path
+                                    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+                                </path>
+                            </svg>
+                        </div>
+                        <div class="social-info">
+                            <div class="social-name">GitHub</div>
+                            <div class="social-username">@Pranav1211</div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="https://medium.com/@beyondmebtw" class="social-link" target="_blank">
+                    <div class="social-item">
+                        <div class="social-icon-wrapper">
+                            <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                                <path d="M8 10.5h8M8 14.5h4"></path>
+                            </svg>
+                        </div>
+                        <div class="social-info">
+                            <div class="social-name">Medium</div>
+                            <div class="social-username">@BeyondMeBtw</div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="https://youtube.com/@beyondmebtw" class="social-link" target="_blank">
+                    <div class="social-item">
+                        <div class="social-icon-wrapper">
+                            <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <!-- YouTube Logo -->
+                                <path
+                                    d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z">
+                                </path>
+                                <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
+                            </svg>
+                        </div>
+                        <div class="social-info">
+                            <div class="social-name">Youtube</div>
+                            <div class="social-username">@BeyondMeBtw</div>
+                        </div>
+                    </div>
+                </a>
+
+
+
+                <a href="https://www.linkedin.com/in/pranav-veeraghanta-315760119/" class="social-link" target="_blank">
+                    <div class="social-item">
+                        <div class="social-icon-wrapper">
+                            <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path
+                                    d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z">
+                                </path>
+                                <rect x="2" y="9" width="4" height="12"></rect>
+                                <circle cx="4" cy="4" r="2"></circle>
+                            </svg>
+                        </div>
+                        <div class="social-info">
+                            <div class="social-name">LinkedIn</div>
+                            <div class="social-username">Pranav Veeraghanta</div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="#" class="social-link" id="copy-email">
+                    <div class="social-item">
+                        <div class="social-icon-wrapper">
+                            <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z">
+                                </path>
+                                <polyline points="22,6 12,13 2,6"></polyline>
+                            </svg>
+                        </div>
+                        <div class="social-info">
+                            <div class="social-name">Email</div>
+                            <div class="social-username" id="email-address">Beyondmebtw@gmail.com</div>
+                        </div>
+                    </div>
+                </a>
+                <div id="toast" class="toast">Email copied to clipboard!</div>
+            </div>
+
+            <div class="contact-cta">Let's connect and collaborate!</div>
+        </div>
+
+        <!-- Latest Post -->
+        <div class="bento-item latest-post">
+            <div class="latest-post-header">Latest Post</div>
+            <div class="latest-post-content">
+                <img src="images/pic3.jpg" alt="Latest-ost" class="latest-post-img">
+                <div class="latest-post-info">
+                    <div>
+                        <div class="latest-post-title">Beyond Me Btw : A New Chapter</div>
+                        <div class="latest-post-date">March 1, 2025</div>
+                        <div class="latest-post-excerpt">Two years ago, I launched my blog, Beyond Me Btw, with the goal
+                            of exploring new experiences and ...</div>
+                    </div>
+                    <button class="read-more">Read More</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Projects Grid -->
+        <div class="bento-item projects-showcase">
+            <h2 class="section-title">Featured Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-icon">📝</div>
+                    <h3 class="project-title">Film Analysis Series</h3>
+                    <p class="project-desc">In-depth analysis of classic and contemporary films</p>
+                </div>
+                <div class="project-card">
+                    <div class="project-icon">🎬</div>
+                    <h3 class="project-title">Screenplay Workshop</h3>
+                    <p class="project-desc">Resources and tips for aspiring screenwriters</p>
+                </div>
+                <div class="project-card">
+                    <div class="project-icon">📚</div>
+                    <h3 class="project-title">Book to Film Database</h3>
+                    <p class="project-desc">Comparing literary works to their film adaptations</p>
+                </div>
+                <div class="project-card">
+                    <div class="project-icon">🎙️</div>
+                    <h3 class="project-title">Culture Podcast</h3>
+                    <p class="project-desc">Conversations about films, books, and media</p>
+                </div>
+            </div>
+            <a href="projects.html" class="view-all-btn">View All Projects</a>
+        </div>
+
+        <!-- Twitter Feed -->
+        <div class="bento-item twitter-feed">
+            <h2 class="section-title">Twitter Feed</h2>
+            <div class="tweet-container">
+                <a class="twitter-timeline" data-height="400" data-theme="light"
+                    href="https://twitter.com/beyondmebtw">Tweets by beyondmebtw</a>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 
 </html>
