--- a/index.html
+++ b/index.html
@@ -148,13 +148,12 @@
         <div class="bento-item latest-post">
             <div class="latest-post-header">Latest Post</div>
             <div class="latest-post-content">
-                <img src="images/pic3.jpg" alt="Latest-ost" class="latest-post-img">
+                <img src="" alt="Latest-ost" class="latest-post-img">
                 <div class="latest-post-info">
                     <div>
-                        <div class="latest-post-title">Beyond Me Btw : A New Chapter</div>
-                        <div class="latest-post-date">March 1, 2025</div>
-                        <div class="latest-post-excerpt">Two years ago, I launched my blog, Beyond Me Btw, with the goal
-                            of exploring new experiences and ...</div>
+                        <div class="latest-post-title"></div>
+                        <div class="latest-post-date"></div>
+                        <div class="latest-post-excerpt"></div>
                     </div>
                     <button class="read-more">Read More</button>
                 </div>
