--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beyond Me Btw</title>
+    <meta name="description" content="Explore insightful articles by Pranav Veeraghanta, diving into personal experiences, and in-depth reviews of movies, TV shows, technology and Formula 1. Beyond Me Btw celebrates storytelling and innovation. This blog aims to Connect, Grow and Have Fun.">
+
+    <title>Home | BeyondMeBtw</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
+
+    <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/assets/images/favicon.ico">
+    <meta property="og:image" content="https://beyondmebtw.com/assets/images/favicon.ico">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Kreon:wght@300&family=Permanent+Marker&display=swap');
+    </style>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bento.css">
     <link rel="stylesheet" href="css/profile-card.css">
