--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
         <!-- Welcome section -->
         <div class="bento-item welcome-section">
-            <h2 class="section-title">Welcome!</h2>
+            <h2 class="section-title">Hello There!</h2>
             <p class="welcome-text">
-                Hello! I'm Pranav Veeraghanta, a college student with a passion for movies, music, and gaming.
-                Welcome to my blog, where you can explore and discover the world <i>Beyond Me</i>.
+                I'm <b>Pranav Veeraghanta</b>, a college student with a passion for movies, music and living life to the fullest.
+                Welcome to my blog, where you can get to know me and explore the world <b><i>Beyond Me</i></b>.
             </p>
             <a href="about.html" class="learn-more-btn">Learn more about me</a>
         </div>
@@ -151,7 +151,7 @@
                 <div id="toast" class="toast">Email copied to clipboard!</div>
             </div>
 
-            <div class="contact-cta">Let's connect and collaborate!</div>
+            <div class="contact-cta">Let's connect and grow!</div>
         </div>
 
         <!-- Latest Post -->
