--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
         <!-- Latest Post -->
         <div class="bento-item latest-post">
-            <div class="latest-post-header">Latest Post</div>
+            <div class="latest-post-header">Latest Post!</div>
             <div class="latest-post-content">
                 <img src="" alt="Latest-ost" class="latest-post-img">
                 <div class="latest-post-info">
