--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                 </a>
 
-                <a href="https://twitter.com/YourTwitterHandle" class="social-link" target="_blank">
+                <a href="https://twitter.com/pranavisda1" class="social-link" target="_blank">
                     <div class="social-item">
                         <div class="social-icon-wrapper">
                             <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
