--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <!-- Latest Post -->
         <div class="bento-item latest-post">
             <div class="latest-post-header">Latest Post!</div>
-            <div class="latest-post-content">
+            <div class="latest-post-content" data-url="">
                 <img src="" alt="Latest-ost" class="latest-post-img">
                 <div class="latest-post-info">
                     <div>
@@ -193,32 +193,39 @@
         </div>
 
         <!-- Featured Posts -->
-        <div class="bento-item featured-posts">
+        <div class="bento-item featured-posts ">
             <h2 class="section-title">Featured Posts</h2>
             <div class="featured-posts-container">
-                <div class="featured-post">
-                    <img src="assets/images/placeholder-post1.jpg" alt="Featured post" class="featured-post-img">
+                <div class="featured-post fp1" data-url="">
+                    <img src="" alt="Featured post" class="featured-post-img">
                     <div class="featured-post-details">
-                        <h3 class="featured-post-title">The Art of Film Critique</h3>
-                        <p class="featured-post-date">February 15, 2025</p>
-                        <p class="featured-post-excerpt">Exploring the elements that make a meaningful film analysis...
-                        </p>
+                        <h3 class="featured-post-title"></h3>
+                        <p class="featured-post-date"></p>
+                        <p class="featured-post-excerpt"> </p>
                     </div>
                 </div>
-                <div class="featured-post">
-                    <img src="assets/images/placeholder-post2.jpg" alt="Featured post" class="featured-post-img">
+                <div class="featured-post fp2" data-url="">
+                    <img src="" alt="Featured post" class="featured-post-img">
                     <div class="featured-post-details">
-                        <h3 class="featured-post-title">Formula 1: Season Review</h3>
-                        <p class="featured-post-date">January 28, 2025</p>
-                        <p class="featured-post-excerpt">Looking back at the highlights and key moments...</p>
+                        <h3 class="featured-post-title"></h3>
+                        <p class="featured-post-date"></p>
+                        <p class="featured-post-excerpt"></p>
                     </div>
                 </div>
-                <div class="featured-post">
-                    <img src="assets/images/placeholder-post3.jpg" alt="Featured post" class="featured-post-img">
+                <div class="featured-post fp3" data-url="">
+                    <img src="" alt="Featured post" class="featured-post-img">
                     <div class="featured-post-details">
-                        <h3 class="featured-post-title">Tech Review: Latest Gadgets</h3>
-                        <p class="featured-post-date">January 10, 2025</p>
-                        <p class="featured-post-excerpt">Hands-on experience with the newest technology releases...</p>
+                        <h3 class="featured-post-title"></h3>
+                        <p class="featured-post-date"></p>
+                        <p class="featured-post-excerpt"></p>
+                    </div>
+                </div>
+                <div class="featured-post fp4" data-url="">
+                    <img src="" alt="Featured post" class="featured-post-img">
+                    <div class="featured-post-details">
+                        <h3 class="featured-post-title"></h3>
+                        <p class="featured-post-date"></p>
+                        <p class="featured-post-excerpt"></p>
                     </div>
                 </div>
             </div>
