--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <link rel="stylesheet" href="css/latest-post.css">
     <link rel="stylesheet" href="css/get-in-touch.css">
     <link rel="stylesheet" href="css/projects-showcase.css">
-    <link rel="stylesheet" href="css/twitter-feed.css">
     <link rel="stylesheet" href="css/featured-posts.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
@@ -179,7 +178,7 @@
         <!-- Latest Post -->
         <div class="bento-item latest-post">
             <div class="latest-post-header">Latest Post!</div>
-            <div class="latest-post-content" data-url="">
+            <div class="latest-post-content">
                 <img src="" alt="Latest-ost" class="latest-post-img">
                 <div class="latest-post-info">
                     <div>
@@ -196,7 +195,7 @@
         <div class="bento-item featured-posts ">
             <h2 class="section-title">Featured Posts</h2>
             <div class="featured-posts-container">
-                <div class="featured-post fp1" data-url="">
+                <div class="featured-post fp1">
                     <img src="" alt="Featured post" class="featured-post-img">
                     <div class="featured-post-details">
                         <h3 class="featured-post-title"></h3>
@@ -204,7 +203,7 @@
                         <p class="featured-post-excerpt"> </p>
                     </div>
                 </div>
-                <div class="featured-post fp2" data-url="">
+                <div class="featured-post fp2">
                     <img src="" alt="Featured post" class="featured-post-img">
                     <div class="featured-post-details">
                         <h3 class="featured-post-title"></h3>
@@ -212,7 +211,7 @@
                         <p class="featured-post-excerpt"></p>
                     </div>
                 </div>
-                <div class="featured-post fp3" data-url="">
+                <div class="featured-post fp3">
                     <img src="" alt="Featured post" class="featured-post-img">
                     <div class="featured-post-details">
                         <h3 class="featured-post-title"></h3>
@@ -220,7 +219,7 @@
                         <p class="featured-post-excerpt"></p>
                     </div>
                 </div>
-                <div class="featured-post fp4" data-url="">
+                <div class="featured-post fp4">
                     <img src="" alt="Featured post" class="featured-post-img">
                     <div class="featured-post-details">
                         <h3 class="featured-post-title"></h3>
