--- a/index.html
+++ b/index.html
@@ -196,35 +196,35 @@
             <h2 class="section-title">Featured Posts</h2>
             <div class="featured-posts-container">
                 <div class="featured-post fp1">
-                    <img src="" alt="Featured post" class="featured-post-img">
+                    <img src="" alt="Featured post" class="featured-post-img fp1img">
                     <div class="featured-post-details">
-                        <h3 class="featured-post-title"></h3>
-                        <p class="featured-post-date"></p>
-                        <p class="featured-post-excerpt"> </p>
+                        <h3 class="featured-post-title fp1title"></h3>
+                        <p class="featured-post-date fp1date"></p>
+                        <p class="featured-post-excerpt fp1excerpt"> </p>
                     </div>
                 </div>
                 <div class="featured-post fp2">
-                    <img src="" alt="Featured post" class="featured-post-img">
+                    <img src="" alt="Featured post" class="featured-post-img fp2img">
                     <div class="featured-post-details">
-                        <h3 class="featured-post-title"></h3>
-                        <p class="featured-post-date"></p>
-                        <p class="featured-post-excerpt"></p>
+                        <h3 class="featured-post-title fp2title"></h3>
+                        <p class="featured-post-date fp2date"></p>
+                        <p class="featured-post-excerpt fp2excerpt"></p>
                     </div>
                 </div>
                 <div class="featured-post fp3">
-                    <img src="" alt="Featured post" class="featured-post-img">
+                    <img src="" alt="Featured post" class="featured-post-img fp3img">
                     <div class="featured-post-details">
-                        <h3 class="featured-post-title"></h3>
-                        <p class="featured-post-date"></p>
-                        <p class="featured-post-excerpt"></p>
+                        <h3 class="featured-post-title fp3title"></h3>
+                        <p class="featured-post-date fp3date"></p>
+                        <p class="featured-post-excerpt fpr3excerpt"></p>
                     </div>
                 </div>
                 <div class="featured-post fp4">
-                    <img src="" alt="Featured post" class="featured-post-img">
+                    <img src="" alt="Featured post" class="featured-post-img fp4img">
                     <div class="featured-post-details">
-                        <h3 class="featured-post-title"></h3>
-                        <p class="featured-post-date"></p>
-                        <p class="featured-post-excerpt"></p>
+                        <h3 class="featured-post-title fp4title"></h3>
+                        <p class="featured-post-date fp4date"></p>
+                        <p class="featured-post-excerpt fp4excerpt"></p>
                     </div>
                 </div>
             </div>
