--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="bento-item featured-posts ">
             <h2 class="section-title">Featured Posts</h2>
             <div class="featured-posts-container">
-                <div class="featured-post fp0">
+                <div class="featured-post" id="fp0">
                     <img src="" alt="Featured post" class="featured-post-img fp0img">
                     <div class="featured-post-details">
                         <h3 class="featured-post-title fp0title"></h3>
@@ -203,7 +203,7 @@
                         <p class="featured-post-excerpt fp0excerpt"> </p>
                     </div>
                 </div>
-                <div class="featured-post fp1">
+                <div class="featured-post" id="fp1">
                     <img src="" alt="Featured post" class="featured-post-img fp1img">
                     <div class="featured-post-details">
                         <h3 class="featured-post-title fp1title"></h3>
@@ -211,7 +211,7 @@
                         <p class="featured-post-excerpt fp1excerpt"></p>
                     </div>
                 </div>
-                <div class="featured-post fp2">
+                <div class="featured-post" id="fp2">
                     <img src="" alt="Featured post" class="featured-post-img fp2img">
                     <div class="featured-post-details">
                         <h3 class="featured-post-title fp2title"></h3>
@@ -219,7 +219,7 @@
                         <p class="featured-post-excerpt fp2excerpt"></p>
                     </div>
                 </div>
-                <div class="featured-post fp3">
+                <div class="featured-post" id="fp3">
                     <img src="" alt="Featured post" class="featured-post-img fp3img">
                     <div class="featured-post-details">
                         <h3 class="featured-post-title fp3title"></h3>
