--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- Profile section (vertical/horizontal format) -->
         <div class="bento-item profile-card">
             <div class="profile-image">
-                <img src="assets/images/pv1.JPG" alt="Profile image" class="profile-pic">
+                <img src="assets/images/pv1.webp" alt="Profile image" class="profile-pic">
             </div>
         </div>
 
