--- a/manage/index.html
+++ b/manage/index.html
@@ -16,19 +16,19 @@
             <h2>Latest</h2>
             <input type="hidden" name="instance" value="latest">
             <label for="name-latest">Post Name:</label>
-            <input type="text" id="name-latest" name="name" required>
+            <input type="text" id="name-latest" name="name" >
 
             <label for="date-latest">Publish Date:</label>
-            <input type="date" id="date-latest" name="date" required>
+            <input type="date" id="date-latest" name="date" >
 
             <label for="excerpt-latest">Excerpt:</label>
-            <input type="text" id="excerpt-latest" name="excerpt" required>
+            <input type="text" id="excerpt-latest" name="excerpt" >
 
             <label for="thumbnail-latest">Thumbnail Image name:</label>
-            <input type="text" id="thumbnail-latest" name="thumbnail" required>
+            <input type="text" id="thumbnail-latest" name="thumbnail" >
 
             <label for="link-latest">Post Link:</label>
-            <input type="text" id="link-latest" name="link" required>
+            <input type="text" id="link-latest" name="link" >
 
             <label for="key-latest">Password:</label>
             <input type="password" id="key-latest" name="key" required>
@@ -41,19 +41,19 @@
             <h2>Featured 1</h2>
             <input type="hidden" name="instance" value="featured1">
             <label for="name-featured1">Post Name:</label>
-            <input type="text" id="name-featured1" name="name" required>
+            <input type="text" id="name-featured1" name="name" >
 
             <label for="date-featured1">Publish Date:</label>
-            <input type="date" id="date-featured1" name="date" required>
+            <input type="date" id="date-featured1" name="date" >
 
             <label for="excerpt-featured1">Excerpt:</label>
-            <input type="text" id="excerpt-featured1" name="excerpt" required>
+            <input type="text" id="excerpt-featured1" name="excerpt" >
 
             <label for="thumbnail-featured1">Thumbnail Image name:</label>
-            <input type="text" id="thumbnail-featured1" name="thumbnail" required>
+            <input type="text" id="thumbnail-featured1" name="thumbnail" >
 
             <label for="link2">Post Link:</label>
-            <input type="text" id="link2" name="link" required>
+            <input type="text" id="link2" name="link" >
 
             <label for="key-featured1">Password:</label>
             <input type="password" id="key-featured1" name="key" required>
@@ -66,19 +66,19 @@
             <h2>Featured 2</h2>
             <input type="hidden" name="instance" value="featured2">
             <label for="name-featured2">Post Name:</label>
-            <input type="text" id="name-featured2" name="name" required>
+            <input type="text" id="name-featured2" name="name" >
 
             <label for="date-featured2">Publish Date:</label>
-            <input type="date" id="date-featured2" name="date" required>
+            <input type="date" id="date-featured2" name="date" >
 
             <label for="excerpt-featured2">Excerpt:</label>
-            <input type="text" id="excerpt-featured2" name="excerpt" required>
+            <input type="text" id="excerpt-featured2" name="excerpt" >
 
             <label for="thumbnail-featured2">Thumbnail Image name:</label>
-            <input type="text" id="thumbnail-featured2" name="thumbnail" required>
+            <input type="text" id="thumbnail-featured2" name="thumbnail" >
 
             <label for="link2">Post Link:</label>
-            <input type="text" id="link2" name="link" required>
+            <input type="text" id="link2" name="link" >
 
             <label for="key-featured2">Password:</label>
             <input type="password" id="key-featured2" name="key" required>
@@ -91,19 +91,19 @@
             <h2>Featured 3</h2>
             <input type="hidden" name="instance" value="featured3">
             <label for="name-featured3">Post Name:</label>
-            <input type="text" id="name-featured3" name="name" required>
+            <input type="text" id="name-featured3" name="name" >
 
             <label for="date-featured3">Publish Date:</label>
-            <input type="date" id="date-featured3" name="date" required>
+            <input type="date" id="date-featured3" name="date" >
 
             <label for="excerpt-featured3">Excerpt:</label>
-            <input type="text" id="excerpt-featured3" name="excerpt" required>
+            <input type="text" id="excerpt-featured3" name="excerpt" >
 
             <label for="thumbnail-featured3">Thumbnail Image name:</label>
-            <input type="text" id="thumbnail-featured3" name="thumbnail" required>
+            <input type="text" id="thumbnail-featured3" name="thumbnail" >
 
             <label for="link3">Post Link:</label>
-            <input type="text" id="link3" name="link" required>
+            <input type="text" id="link3" name="link" >
 
             <label for="key-featured3">Password:</label>
             <input type="password" id="key-featured3" name="key" required>
@@ -116,19 +116,19 @@
             <h2>Featured 4</h2>
             <input type="hidden" name="instance" value="featured4">
             <label for="name-featured4">Post Name:</label>
-            <input type="text" id="name-featured4" name="name" required>
+            <input type="text" id="name-featured4" name="name" >
 
             <label for="date-featured4">Publish Date:</label>
-            <input type="date" id="date-featured4" name="date" required>
+            <input type="date" id="date-featured4" name="date" >
 
             <label for="excerpt-featured4">Excerpt:</label>
-            <input type="text" id="excerpt-featured4" name="excerpt" required>
+            <input type="text" id="excerpt-featured4" name="excerpt" >
 
             <label for="thumbnail-featured4">Thumbnail Image name:</label>
-            <input type="text" id="thumbnail-featured4" name="thumbnail" required>
+            <input type="text" id="thumbnail-featured4" name="thumbnail" >
 
             <label for="link4">Post Link:</label>
-            <input type="text" id="link4" name="link" required>
+            <input type="text" id="link4" name="link" >
 
             <label for="key-featured4">Password:</label>
             <input type="password" id="key-featured4" name="key" required>
