--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
 
     <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/assets/images/favicon.ico">
     <meta property="og:image" content="https://beyondmebtw.com/assets/images/favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Kreon:wght@300&family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Audiowide&family=Kreon:wght@300&family=Permanent+Marker&display=swap"
+        rel="stylesheet">
 
 
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/styles.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/bento.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/profile-card.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/welcome-card.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/latest-post.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/get-in-touch.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/projects-showcase.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/featured-posts.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/bento.css">
+    <link rel="stylesheet" href="css/profile-card.css">
+    <link rel="stylesheet" href="css/welcome-card.css">
+    <link rel="stylesheet" href="css/latest-post.css">
+    <link rel="stylesheet" href="css/get-in-touch.css">
+    <link rel="stylesheet" href="css/projects-showcase.css">
+    <link rel="stylesheet" href="css/featured-posts.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
 </head>
 
@@ -258,11 +260,16 @@
                 </div>
             </div>
             <a href="projects.html" class="view-all-btn">View All Projects</a>
+        </div>               
+    </div>
+
+    <div id="footer">
+        <div>            
+            © 2022-Present. Beyond Me Btw created by <a href="https://beyondmebtw.com/about" style="color: black; text-decoration: none; font-weight: bold;" target="_blank">Pranav Veeraghanta.</a>
         </div>
-
-
-        <script src="script.js"></script>
-
+    </div>
+    
+    <script src="script.js"></script>
 </body>
 
 </html>
