--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Explore insightful articles by Pranav Veeraghanta, diving into personal experiences, and in-depth reviews of movies, TV shows, technology and Formula 1. Beyond Me Btw celebrates storytelling and innovation. This blog aims to Connect, Grow and Have Fun.">
 
-    <title>Blog | BeyondMeBtw</title>
+    <title>About | BeyondMeBtw</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
 
@@ -18,7 +18,7 @@
         rel="stylesheet">
 
 
-    <link rel="stylesheet" href="blog.css">
+    <link rel="stylesheet" href="about.css">
 
 </head>
 
@@ -41,7 +41,7 @@
         </div>
     </div>
     
-    <script src="blog.js"></script>
+    <script src="about.js"></script>
 </body>
 
 </html>
