--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 fullest.
                 Welcome to my blog, where you can get to know me and explore the world <b><i>Beyond Me</i></b>.
             </p>
-            <a href="about.html" class="learn-more-btn">Learn more about me</a>
+            <a href="https://beyondmebtw.com/about" class="learn-more-btn">Learn more about me</a>
         </div>
 
         <!-- Contact/Get in Touch Section - Moved to top -->
@@ -230,7 +230,7 @@
                     </div>
                 </div>
             </div>
-            <a href="blog.html" class="view-all-btn">View All Posts</a>
+            <a href="blog.beyondmebtw.com" class="view-all-btn">View All Posts</a>
         </div>
 
         <!-- Projects Grid -->
@@ -258,7 +258,7 @@
                     <p class="project-desc">Conversations about films, books, and media</p>
                 </div>
             </div>
-            <a href="projects.html" class="view-all-btn">View All Projects</a>
+            <a href="https://beyondmebtw.com/projects" class="view-all-btn">View All Projects</a>
         </div>               
     </div>
 
