--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     </div>
                 </div>
             </div>
-            <a href="blog.beyondmebtw.com" class="view-all-btn">View All Posts</a>
+            <a href="https://blog.beyondmebtw.com" class="view-all-btn">View All Posts</a>
         </div>
 
         <!-- Projects Grid -->
