--- a/projects/index.html
+++ b/projects/index.html
@@ -17,7 +17,7 @@
         href="https://fonts.googleapis.com/css2?family=Audiowide&family=Kreon:wght@300&family=Permanent+Marker&display=swap"
         rel="stylesheet">
 
-
+    <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="proj.css">
 
 </head>
@@ -36,11 +36,12 @@
     <div id="cs">Coming Soon</div>
 
     <div id="footer">
-        <div>            
-            © 2022-Present. Beyond Me Btw created by <a href="https://beyondmebtw.com/about" style="color: black; text-decoration: none; font-weight: bold;" target="_blank">Pranav Veeraghanta.</a>
+        <div>
+            © 2022-Present. Beyond Me Btw created by <a href="https://beyondmebtw.com/about"
+                style="color: black; text-decoration: none; font-weight: bold;" target="_blank">Pranav Veeraghanta.</a>
         </div>
     </div>
-    
+
     <script src="proj.js"></script>
 </body>
 
