--- a/about/index.html
+++ b/about/index.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Explore insightful articles by Pranav Veeraghanta, diving into personal experiences, and in-depth reviews of movies, TV shows, technology and Formula 1. Beyond Me Btw celebrates storytelling and innovation. This blog aims to Connect, Grow and Have Fun.">
+        content="Pranav Veeraghanta, A 20 year old college student making the best out of life post pandemic. He is here to explore and enjoy life. Beyond Me Btw celebrates his ability of storytelling and innovation.">
 
     <title>About | BeyondMeBtw</title>
 
@@ -16,8 +15,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Audiowide&family=Kreon:wght@300&family=Permanent+Marker&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="responsive.css">
+
+
     <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="responsive.css">
 
 </head>
 
@@ -31,16 +32,14 @@
             <div id="about" class="link">About</div>
         </div>
     </header>
-
     <div id="cs">Coming Soon</div>
 
     <div id="footer">
-        <div>
-            © 2022-Present. Beyond Me Btw created by <a href="https://beyondmebtw.com/about"
-                style="color: black; text-decoration: none; font-weight: bold;" target="_blank">Pranav Veeraghanta.</a>
+        <div>            
+            © 2022-Present. Beyond Me Btw created by <a href="https://beyondmebtw.com/about" style="color: black; text-decoration: none; font-weight: bold;" target="_blank">Pranav Veeraghanta.</a>
         </div>
     </div>
-
+    
     <script src="about.js"></script>
 </body>
 
