--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div id="projects" class="link">Projects</div>
             <div id="about" class="link">About</div>
         </div>
-        <div class="theme-toggle-container pb-5">
+        <!-- <div class="theme-toggle-container pb-5">
             <label class="inline-flex items-center cursor-pointer">
                 <input type="checkbox" value="" class="sr-only peer" id="theme-switch">
                 <div class="relative w-28 h-14 bg-[#F4F2EF] border-2 border-[#3b342d] shadow-md peer-focus:outline-none rounded-full
@@ -70,7 +70,7 @@
                     </span>
                 </div>
             </label>
-        </div>
+        </div> -->
     </header>
 
     <div class="bento-grid">
