--- a/index.html
+++ b/index.html
@@ -8,25 +8,31 @@
     <title>Home | BeyondMeBtw</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="css/tailwind.min.css">
 
     <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/assets/images/favicon.ico">
     <meta property="og:image" content="https://beyondmebtw.com/assets/images/favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Audiowide&family=Delius&family=Kreon:wght@300&family=Permanent+Marker&display=swap"
-        rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Delius&family=Kreon:wght@300&family=Permanent+Marker&display=swap');
+    </style>
 
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/profile-card.css">
     <link rel="stylesheet" href="css/welcome-card.css">
     <link rel="stylesheet" href="css/latest-post.css">
     <link rel="stylesheet" href="css/get-in-touch.css">
     <link rel="stylesheet" href="css/featured-posts.css">
     <link rel="stylesheet" href="css/projects-showcase.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive.css"> -->
 
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/styles.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/profile-card.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/welcome-card.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/latest-post.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/get-in-touch.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/featured-posts.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/projects-showcase.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive.css">
 </head>
 
 <body>
