--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Home | BeyondMeBtw</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
-    <link rel="stylesheet" href="css/tailwind.min.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/assets/images/favicon.ico">
     <meta property="og:image" content="https://beyondmebtw.com/assets/images/favicon.ico">
@@ -61,7 +61,7 @@
             <div id="projects" class="link">Projects</div>
             <div id="about" class="link">About</div>
         </div>
-        <div class="theme-toggle-container pb-5">
+        <!-- <div class="theme-toggle-container pb-5">
             <label class="inline-flex items-center cursor-pointer">
                 <input type="checkbox" value="" class="sr-only peer" id="theme-switch">
                 <div class="relative w-28 h-14 bg-[#F4F2EF] border-2 border-[#3b342d] shadow-md peer-focus:outline-none rounded-full
@@ -76,14 +76,14 @@
                     </span>
                 </div>
             </label>
-        </div>
+        </div> -->
     </header>
 
     <div class="bento-grid">
         <!-- Profile section (vertical/horizontal format) -->
         <div class="bento-item profile-card">
             <div class="profile-image">
-                <img src="assets/images/pv1.webp" alt="Profile image" class="profile-pic">
+                <img src="https://beyondmebtw.com/assets/images/pv1.webp" alt="Profile image" class="profile-pic">
             </div>
         </div>
 
